--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h2>I'm a Web Developer</h2>
         <hr> 
         <a href="http://127.0.0.1:3000/public/index.html"><h3>Movie Ranking Project</h3></a>
-        <img src="/assets/images/movie.png" height="200" alt="Movie ranking preview"/>
+        <img src="./assets/images/movie.png" height="200" alt="Movie ranking preview"/>
         <a href="http://127.0.0.1:3000/public/birthday-invite.html"><h3>Bday Invite</h3></a>
         <img src="./assets/images/bday.png" height="200" alt="Bday invite preview"/>
         <hr>
