--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         <h1>TC's Portfolio</h1>
         <h2>I'm a Web Dev</h2>
         <hr> 
-        <a href="http://127.0.0.1:3000/public/index.html"><h3>Movie Ranking Project</h3></a>
+        <a href="./public/movie.html"><h3>Movie Ranking Project</h3></a>
         <img src="./assets/images/movie.png" height="200" alt="Movie ranking preview"/>
-        <a href="http://127.0.0.1:3000/public/birthday-invite.html"><h3>Bday Invite</h3></a>
+        <a href="./public/bday.html"><h3>Bday Invite</h3></a>
         <img src="./assets/images/bday.png" height="200" alt="Bday invite preview"/>
         <hr>
 
-        <a href="http://127.0.0.1:3000/public/about.html">About Me</a>   <a href="http://127.0.0.1:3000/public/contact.html">Contact Me</a>
+        <a href="./public/about.html">About Me</a>  <a href="./public/contact.html">Contact Me</a>
 
     </body>
  </html>
